--- a/Internet Academy/style.css
+++ b/Internet Academy/style.css
@@ -67,7 +67,7 @@ ul
 
 .main-content
 {
-    padding-left: 200px;
+    margin-left: 200px;
 }
 
 .section 
@@ -830,15 +830,15 @@ h3.profession
 /* Footer Start*/
 .footer
 {
-    min-height: 400px;
-    max-height: 400px;
-}
-
-hr 
-{
-  border: dotted #EAF6F6 10px;
-  border-bottom: none;
-  margin-bottom: 100px ;
+    background-image: url('Resources/Footer.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    position: relative;
+    bottom: 0;
+    min-height: 250px;
+    max-height: 250px;
+    margin-left: 200px;
 }
 
 .footer .footer-item
@@ -846,7 +846,7 @@ hr
     flex: 0 0 25%;
     max-width: 25%;
     text-align: center;
-    margin-bottom: 60px;
+    margin: 50px 0 50px 0 ;
 }
 
 .footer .footer-item .icon
@@ -856,8 +856,8 @@ hr
 
 .footer .footer-item .icon i:hover
 {
-    background-color: var(--skin-color);
-    color: var(--text-black-900);
+    background-color: black;
+    color: var(--skin-color);
     border-radius: 50%;
     padding: 10px;
 }
@@ -865,7 +865,7 @@ hr
 .footer .footer-item .icon i
 {
     font-size: 25px;
-    color: var(--skin-color)
+    color: var(--bg-black-900)
 }
 
 .footer .footer-item h4
@@ -883,7 +883,6 @@ hr
     position: relative;
     font-size: 15px;
     text-align: center;
-    bottom: 0;
 }
 /* Footer End */
 
